--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,14 @@
 {
   "compilerOptions": {
+    "target": "es2020",
+    "module": "esnext",
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": "src",
+    "jsx": "react",
+    "noImplicitAny": false,
     "paths": {
-      "@/*": ["./src/*"]
+      "components/*": ["./components/*"]
     }
-  }
+  },
+  "exclude": ["node_modules"]
 }
